--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -88,6 +88,11 @@ body {
     text-align: center;
 }
 
+.cards {
+    display: flex;
+    flex-flow: row wrap;
+}
+
 .cards__card {
     list-style-type: none;
     display: inline-block;
@@ -115,6 +120,9 @@ body {
 }
 
 .cards__card__authors {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-style: italic;
 }
 
