--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,7 +46,7 @@ body {
 .search {
     width: 100%;
     padding: 10px 0 15px 0;
-    margin-bottom: 5px;
+    margin: 5px 0 5px 0;
     background-color: $special-grey;
 }
 
@@ -63,6 +63,7 @@ body {
 }
 
 .search__selects__wrapper {
+    
     label {
         @extend %bold-text;
         margin-right: 10px;
@@ -70,9 +71,6 @@ body {
     }
     label:not(:first-child) {
         margin-left: 10px;
-    }
-    select:first-child {
-        margin-right: 10px;
     }
 }
 
@@ -84,22 +82,28 @@ body {
 }
 
 .books__total {
-    margin: 10px 0;
+    margin: 20px 0;
     text-align: center;
 }
 
-.cards {
+.books__cards {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
 }
 
-.cards__card {
+.books__cards__card {
     list-style-type: none;
     display: inline-block;
+    margin: 0 15px 15px 0;
+    font-size: 12px;
+    overflow: hidden;
 }
+
 
 .cards__card__block {
     background-color: $special-grey;
+    height: 350px;
 }
 
 .cards__card__link {
@@ -113,21 +117,61 @@ body {
 
 .cards__card__category {
     text-decoration: underline;
+    font-size: 13px;
 }
 
 .cards__card__title {
     @extend %bold-text;
+    font-size: 13px;
 }
 
 .cards__card__authors {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     font-style: italic;
+}
+
+.cards__card__img {
+    width: 100%;
+    height: 60%;
+}
+
+.book__load {
+    margin-bottom: 10px;
 }
 
 /*Book*/
 
+.book {
+    margin-top: 30px;
+}
+
+.book__wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.book__img {
+    width: 20%;
+    height: 40%;
+    margin-right: 60px;
+}
+
+.book__info {
+    width: 50%;
+
+    h3 {
+        @extend %bold-text;
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+}
+
+.book__info__category {
+    text-decoration: underline;
+}
+
+.book__info__authors {
+    font-style: italic;
+}
 
 
 
